package org.example.enums;

public enum TipoDeNave {
    NAVE_AEGIS,
    NAVE_SWIFT
}
