package org.example.mercado;

public abstract class Item {
    private double precio;
}
